# formkit-ninja

./: .cursorrules  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  FEATURES_COMPARISON.md  NEW_USER_WORKFLOW_SUMMARY.md  README.md  SCHEMA_CONVERSION_SUMMARY.md  TESTING.md  TEST_COVERAGE_ANALYSIS.md  _pyproject.toml  db.sqlite3  debug_naming.py  debug_partisipa.py  demo_workflow.py  docker-compose.yml  formkit_ninja.json  formkitninja.yaml  index.html  issue_22.json  manage.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  test_generator_real_data.py  test_generator_with_data.py  test_output.txt  tox.ini
.agent/workflows/: conventions.md
.cursor/rules/: 001-github-issues.mdc  002-issue-creation-guide.mdc  003-commit-messages.mdc  004-documentation-writing.mdc  004-pytest-requirements.mdc  005-database-container.mdc
.devcontainer/: Dockerfile  README.md  compose.yml  devcontainer.json  docker-compose.yml
.github/: COMMIT_MESSAGE_GUIDE.md  ISSUE_EXAMPLE_additional_props_cleanup.md
.github/workflows/: ci.yml  docs.yml  py.yaml  release.yml
admin/: index.html
classes/: index.html
code_generation/: index.html
database_code_generation/: index.html
docs/: README.md  admin.md  build-docs.sh  classes.md  code_generation.md  database_code_generation.md  feature_matrix.md  index.md  inputs.md  multiple_schemas_options.md  pyproject.toml  quick_start.md  releasing.md  serve-docs.sh  submission_architecture.md
docs/explanations/: architecture.md  options-system.md
docs/how-to/: manage-options.md  run-tests.md  update-protected-nodes.md
docs/reference/: api-endpoints.md  cli-commands.md
docs/stylesheets/: extra.css
docs/tutorials/: getting-started.md
feature_matrix/: index.html
formkit_ninja/: admin.py  admin_code_generation.py  api.py  code_generation_config.py  fields.py  formkit_schema.py  models.py  notifications.py  schema_props.py  triggers.py  urls.py  utils.py
formkit_ninja.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
formkit_ninja/form_submission/: apps.py  handlers.py  import_monitoring.py  models.py  querysets.py  signals.py  utils.py
formkit_ninja/generator/: __init__.py  generator.py  processor.py  python_generator.py  renderer.py  writer.py
formkit_ninja/migrations/: 0001_initial.py  0001_initial_squashed_0008_rename_new_values_formkitschemanode_node_and_more.py  0002_alter_formcomponents_label_alter_formkitschema_key.py  0002_remove_formkitschemanode_children_and_more.py  0003_alter_formcomponents_options_formkitschemanode_group_and_more.py  0003_delete_translatable.py  0004_alter_formcomponents_label_squashed_0009_alter_formcomponents_node.py  0004_alter_formkitschemanode_group_nodechildren_and_more.py  0004_remove_formkitschema_key_and_more.py  0005_delete_schemacondition_and_more.py  0005_option_last_updated_option_object_id_optionlabel_and_more.py  0006_formkitschemanode_placeholder.py  0006_option_group_option_unique_option_id.py  0007_alter_formcomponents_options_and_more.py  0007_alter_option_field.py  0008_rename_new_values_formkitschemanode_node_and_more.py  0009_alter_formcomponents_options_and_more.py  0009_formkitschemanode_text_content_and_more.py  0010_alter_formcomponents_id_alter_option_id_and_more.py  0010_alter_option_options_and_more.py  0011_nodechildren_formkitschemanode_children.py  0011_rename_admin_key_formkitschemanode_label.py  0012_remove_formkitschemanode_group_remove_option_field_and_more.py  0012_rename_key_formcomponents_label.py  0013_alter_formcomponents_label.py  0013_formkitschemanode_option_group.py  0014_schemalabel_schemadescription.py  0015_alter_formkitschema_label.py  0016_alter_nodechildren_options_and_more.py  0017_nodechildren_change_id.py  0018_remove_formcomponents_order_on_insert_option_and_more.py  0020_remove_formcomponents_order_on_update_option_and_more.py  0021_formkitschemanode_is_active.py  0022_formkitschemanode_soft_delete.py  0023_formkitschemanodeevent_and_more.py  0024_remove_formkitschemanode_insert_insert_and_more.py  0025_remove_formkitschemanode_protect_deletes_and_more.py  0028_migrate_additional_props.py  (+19 more)
inputs/: index.html
multiple_schemas_options/: index.html
notebooks/: example.ipynb  example.py  from_html.ipynb  from_html.py
options/: index.html
quick_start/: index.html
releasing/: index.html
scripts/: ci-local.sh
submission_architecture/: index.html
testproject/: api.py  asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py  schemas.json  test_additional_props_promotion.py  test_admin.py  test_admin_best_practice.py  test_admin_code_generation.py  test_admin_node_creation.py  test_admin_partisipa.py  test_admin_preview.py  test_api_errors.py  test_autocomplete.py  test_code_generator.py  test_code_scheme.py  test_complex_nodes.py  test_conditional_logic.py  test_data_loss_roundtrip.py  test_database.py  test_database_source_of_truth.py  test_datepicker.py  test_discriminator.py  test_e2e_partisipa.py  test_end_to_end_workflow.py  test_errors.py  test_extracted_schemas.py  test_fields.py  test_formkit_in.py  test_group.json  test_hidden_node.py  test_html_parser.py  test_integration.py  test_issue_22.py  test_issue_41.py  test_jinja_template.py  test_json_table.py  test_make_name_valid.py  test_management.py  test_management_commands.py  test_migrations.py  (+26 more)
(+295 files in other folders)
