[tool.poetry]
name = "formkit-ninja"
version = "0.7.6"
description = "A Django-Ninja backend to specify FormKit schemas"
authors = ["Josh Brooks <josh@catalpa.io>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/catalpainternational/formkit-ninja"
repository = "https://github.com/catalpainternational/formkit-ninja"
packages = [{include = "formkit_ninja"}]
exclude = ["tests", "formkit_ninja/samples"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
django-ninja = "<1"
Django = "==4.*"
pydantic = "1.10.16"
django-pgtrigger = "==4.*"
rich = "*"
django-pghistory = "==3.*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-django = "*"
isort = "*"
black = "*"
flake8 = "*"
django-extensions = "*"
sqlparse = "*"
mypy = "*"
pre-commit = "*"
mkdocs-material = "*"
mkdocstrings = {extras = ["python"], version = "*"}
pytest-cov = "^4.1.0"
psycopg2-binary = "^2.9.7"
factory-boy = "^3.3.0"
django-stubs = "^4.2.6"
pyyaml = "*"
greenlet = ">=3.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-line-length = "119"

[tool.isort]
profile = 'black'
line_length = 119
multi_line_output = 3
include_trailing_comma = true

[tool.black]
line-length = 119
target-version = ['py310']

[tool.mypy]
python_version = 3.8
plugins = [
    'mypy_django_plugin.main'
    ]

[tool.django-stubs]
django_settings_module = "formkit_ninja.settings"
