[project]
name = "formkit-ninja"
version = "0.7.6"
description = "A Django-Ninja backend to specify FormKit schemas"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Josh Brooks", email = "josh@catalpa.io" }
]
dependencies = [
    "django-ninja<1",
    "Django==4.*",
    "pydantic<2",
    "django-pgtrigger==4.*",
    "rich",
    "django-pghistory==3.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "isort",
    "black",
    "flake8",
    "django-extensions",
    "sqlparse",
    "mypy",
    "pre-commit",
    "playwright>=1.39.0",
    "pytest-playwright",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pytest-cov>=4.1.0",
    "psycopg2-binary>=2.9.7",
    "factory-boy>=3.3.0",
    "django-stubs>=4.2.6",
]

[tool.hatch.build.targets.wheel]
packages = ["formkit_ninja"]

[tool.pylint.format]
max-line-length = "119"

[tool.isort]
profile = 'black'
line_length = 119
multi_line_output = 3
include_trailing_comma = true

[tool.black]
line-length = 119
target-version = ['py310']

[tool.mypy]
python_version = 3.8
plugins = [
    'mypy_django_plugin.main'
    ]

[tool.django-stubs]
django_settings_module = "formkit_ninja.settings"
